# snipz

./: .gitignore  LICENSE  README.md  RELEASING.md  architecture.md  brim-protocol.md  brim.md  calyx-protocol.md  calyx.md  pyproject.toml  scenarios.md  snipz-protocol.md  snipz.md
.github/workflows/: release.yml
benchmarks/: __init__.py  cap_correctness.py  competitor_comparison.py
benchmarks/adapters/: __init__.py  litellm_adapter.py  shekel_adapter.py  snipz_adapter.py
src/brim/: __init__.py  core.py  ledger.py
src/brim/storage/: __init__.py  postgres.py  sqlite.py
src/brim/storage/migrations/: __init__.py
src/brim/storage/migrations/postgres/: 0001_initial.sql  __init__.py
src/brim/storage/migrations/sqlite/: 0001_initial.sql  __init__.py
src/brim/storage/sql/: postgres.py  sqlite.py
src/calyx/: __init__.py  core.py  ledger.py
src/calyx/storage/: __init__.py  postgres.py  sqlite.py
src/calyx/storage/migrations/: 0001_initial.sql  __init__.py
src/calyx/storage/migrations/postgres/: 0001_initial.sql  __init__.py
src/calyx/storage/migrations/sqlite/: 0001_initial.sql  __init__.py
src/calyx/storage/sql/: __init__.py  postgres.py  sqlite.py
src/snipz/: __init__.py  cli.py  core.py  decorator.py  events.py  ledger.py  pricing.py  pricing.toml  sweep.py  sync.py
src/snipz/estimators/: __init__.py  anthropic.py  fallback.py  openai.py
src/snipz/storage/: __init__.py  postgres.py  sqlite.py
src/snipz/storage/migrations/: __init__.py
src/snipz/storage/migrations/postgres/: 0001_initial.sql  __init__.py
src/snipz/storage/migrations/sqlite/: 0001_initial.sql  __init__.py
src/snipz/storage/sql/: postgres.py  sqlite.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_competitor_benchmark.py  test_decorator.py  test_estimators.py  test_events.py  test_phase1.py  test_postgres.py  test_pricing.py  test_smoke.py  test_sweep.py  test_sync.py
