[project]
name = "calyx"
version = "0.0.1"
description = "LLM cost reservation ledger — pre-flight reserve, commit, release."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "kartikeya", email = "contact@tindata.com" }]
keywords = ["llm", "budget", "cost", "ledger", "anthropic", "openai", "rate-limit"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
# Postgres backend. Install with `pip install calyx[postgres]`.
# SQLite-only deployments (single-node, tests) do not need this.
postgres = ["asyncpg>=0.30"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    # Postgres dev tooling — needed to run the `--postgres` test suite.
    # The suite is skipped by default, so a developer without Docker can
    # still run the SQLite tests cleanly.
    "asyncpg>=0.30",
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calyx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
markers = [
    "postgres: requires asyncpg + Docker. Skipped by default; pass --postgres to run.",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "DTZ",    # flake8-datetimez (force timezone-aware datetimes)
    "PTH",    # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_decorators = true

# Third-party libraries without published type stubs.
# - asyncpg: no py.typed marker; we treat its surface as Any.
# - testcontainers: dev-only test fixture import; mypy does not check tests
#   strictly here, but the override keeps the option open.
[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "testcontainers", "testcontainers.*"]
ignore_missing_imports = true
