[project]
name = "snipz"
version = "0.2.0"
description = "LLM cost reservation ledger — pre-flight reserve, commit, release."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "kartikeya", email = "contact@tindata.com" }]
keywords = ["llm", "budget", "cost", "ledger", "anthropic", "openai", "rate-limit"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
# Postgres backend. Install with `pip install snipz[postgres]`.
# SQLite-only deployments (single-node, tests) do not need this.
postgres = ["asyncpg>=0.30"]
# OpenAI estimator. Install with `pip install snipz[openai]`.
# Only needed when constructing OpenAIEstimator; Anthropic and fallback
# estimators have no third-party deps.
openai = ["tiktoken>=0.7"]
# Competitor libraries for the head-to-head correctness benchmark.
# Install with `pip install snipz[bench-competitors]`.
# Not needed for normal use of Snipz — only for running
# benchmarks/competitor_comparison.py and the matching test cases.
bench-competitors = [
    "litellm>=1.0",
    "shekel>=1.1",
]

[project.scripts]
snipz = "snipz.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    # Postgres dev tooling — needed to run the `--postgres` test suite.
    # The suite is skipped by default, so a developer without Docker can
    # still run the SQLite tests cleanly.
    "asyncpg>=0.30",
    "testcontainers[postgres]>=4.0",
    # OpenAI estimator dev dependency — needed to run estimator tests.
    "tiktoken>=0.7",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snipz"]

[tool.hatch.build.targets.sdist]
# Hatchling defaults to "everything not gitignored." The exclusions
# below keep design docs, benchmarks, and dev metadata out of the
# source distribution uploaded to PyPI. They are still tracked in
# git and visible on GitHub — they just don't ship with `pip install`.
#
# Tests are included (convention: lets distros rebuild from source
# and re-run the suite). README.md and pyproject.toml are included
# automatically.
exclude = [
    # Internal positioning / roadmap — split into a notes.md before
    # the public flip per the pre-public-presentation pass.
    "snipz.md",
    # Engineering / spec references — public on GitHub, but users
    # who `pip install snipz` don't need them in the wheel/sdist.
    "architecture.md",
    "snipz-protocol.md",
    "scenarios.md",
    # Marketing artifact — proves the cap-correctness claim. The
    # README embeds the result text; the runnable script lives in
    # the repo, not the installed package.
    "benchmarks",
    # Tests that import ``benchmarks.*``. Without the harness those
    # tests can't run; shipping them in the sdist would break
    # ``pytest`` for anyone rebuilding from source.
    "tests/test_benchmark.py",
    "tests/test_competitor_benchmark.py",
    # Dev metadata not relevant for end-user installation.
    "uv.lock",
    ".python-version",
    ".gitignore",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
markers = [
    "postgres: requires asyncpg + Docker. Skipped by default; pass --postgres to run.",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "DTZ",    # flake8-datetimez (force timezone-aware datetimes)
    "PTH",    # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_decorators = true

# Third-party libraries without published type stubs.
# - asyncpg: no py.typed marker; we treat its surface as Any.
# - testcontainers: dev-only test fixture import; mypy does not check tests
#   strictly here, but the override keeps the option open.
[[tool.mypy.overrides]]
module = [
    "asyncpg",
    "asyncpg.*",
    "testcontainers",
    "testcontainers.*",
    # Optional benchmark dep; benchmarks/cap_correctness.py imports it
    # only inside an `except ImportError` block, so absent stubs are fine.
    "matplotlib",
    "matplotlib.*",
    # Optional bench-competitors deps. Both ship without published stubs
    # and the adapter modules guard their imports.
    "litellm",
    "litellm.*",
    "shekel",
    "shekel.*",
]
ignore_missing_imports = true
